--- a/EncarAlquiler/app/views/layouts/paginas.html.erb
+++ b/EncarAlquiler/app/views/layouts/paginas.html.erb
@@ -33,12 +33,57 @@
         <div id="navbar" class="navbar-collapse collapse">
           <% if usuario_signed_in? %>
             <ul class="nav navbar-nav">
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> Locatarios <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to ' Listar', locatarios_path, class:'glyphicon glyphicon-th-list'%></li>
+                    <li><%= link_to ' Nuevo', new_locatario_path, class:'glyphicon glyphicon-plus'%></li>
+                  </ul>
+                </li>
+
+
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-bookmark"></span> Tipos <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to ' Listar', tipos_path, class:'glyphicon glyphicon-th-list'%></li>
+                    <li><%= link_to ' Nuevo', new_tipo_path, class:'glyphicon glyphicon-plus'%></li>
+                  </ul>
+                </li>
+
+
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-tower"></span> Habitaciones <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to ' Listar', habitaciones_path, class:'glyphicon glyphicon-th-list'%></li>
+                    <li><%= link_to ' Nuevo', new_habitacion_path, class:'glyphicon glyphicon-plus'%></li>
+                  </ul>
+                </li>
+
+
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-calendar"></span> Reservas <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to ' Listar', reservas_path, class:'glyphicon glyphicon-th-list'%></li>
+                    <li><%= link_to ' Nuevo', new_reserva_path, class:'glyphicon glyphicon-plus'%></li>
+                  </ul>
+                </li>
+
+
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-credit-card"></span> Pagos <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to ' Listar', pagos_path, class:'glyphicon glyphicon-th-list'%></li>
+                    <li><%= link_to ' Nuevo', new_pago_path, class:'glyphicon glyphicon-plus'%></li>
+                  </ul>
+                </li>
+<!--
+
                 <li><%= link_to ' Reservas', reservas_path, class:'glyphicon glyphicon-calendar'%></li>
                 <li><%= link_to ' Locatarios', locatarios_path, class:'glyphicon glyphicon-user'%></li>
                 <li><%= link_to ' Habitaciones', habitaciones_path, class:'glyphicon glyphicon-tower'%></li>
                 <li><%= link_to ' Tipos', tipos_path, class:'glyphicon glyphicon-bookmark'%></li>
                 <li><%= link_to ' Pagos', pagos_path, class:'glyphicon glyphicon-credit-card'%></li>
-              <!--<li class="dropdown">
+              <li class="dropdown">
                 <a href="a" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Administración <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to 'Reserva', reservas_path%></li>
