--- a/EncarAlquiler/app/views/principal/index.html.erb
+++ b/EncarAlquiler/app/views/principal/index.html.erb
@@ -1,85 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Pagina Principal</title>
-	    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  		<%= javascript_include_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
- 		<%= csrf_meta_tags %>
-
-
-</head>
-<body>
-<div>
-	<div class="page-header" >
-	  <h4 class="text-center">Bienvenidos a Encarnacion Alquiler 
-	  	<small>Sistema de reserva de Habitaciones</small>
-	  </h4>
-	</div>
-</div>
-	<div class="container">
-		<br>
-		<div class="col-md-3"></div>
-		<div class="col-md-6">
-			<div id="carousel-1" class="carousel slide" data-ride="carousel">
-				<!--Indicadores-->
-				<ol class="carousel-indicators">
-					<li data-target="#carousel-1" data-slide-to="0" class="active"></li>
-					<li data-target="#carousel-1" data-slide-to="1"></li>
-					<li data-target="#carousel-1" data-slide-to="2"></li>
-				</ol>
-
-				<!--Contenedor-->
-				<div class="carousel-inner" role="listbox">
-					<div class="item active">
-						<img src="img/guille.jpg" class="img-responsive" class="active">
-						<div class="carousel-caption">
-							<p>ENCARNACION ALQUILER</p>
-						</div>
-					</div>
-
-					<div class="item">						
-						<img src="img/walter.jpg" class="img-responsive">						
-						<div class="carousel-caption">
-						<p>ENCARNACION ALQUILER</p>
-						</div>
-					</div>
-
-					<div class="item">						
-						<img src="img/bruno.jpg" class="img-responsive">						
-						<div class="carousel-caption">
-							<p>ENCARNACION ALQUILER</p>
-					</div>
-					</div>
-
-
-
-
-				<!--Controles-->
-				<a href="#carousel-1" class="left carousel-control" role="button" data-slide="prev">
-					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-					<span class="sr-only">Anterior</span>
-				</a>
-				<a href="#carousel-1" class="right carousel-control" role="button" data-slide="next">
-					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-					<span class="sr-only">Posterior</span>
-				</a>
-
-			</div>
-		</div>
-	</div>
-
-	<div class="navbar navbar-default navbar-fixed-bottom">
-
-		<div class="container">
-		<!--<a class="navbar-btn btn-primary btn pull-left">Contacto</a>-->
-		</div>
-		
-	</div>
-
-	
-						
-
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <title>Pagina Principal</title>
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+        <%= javascript_include_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+        <%= csrf_meta_tags %>
+    </head>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="page-header" >
+                        <h4 class="text-center">Bienvenidos a Encarnacion Alquiler 
+                            <small>Sistema de reserva de Habitaciones</small>
+                        </h4>
+                    </div>
+                </div>
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div id="carousel-1" class="carousel slide" data-ride="carousel">
+                        <!--Indicadores-->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-1" data-slide-to="1"></li>
+                            <li data-target="#carousel-1" data-slide-to="2"></li>
+                        </ol>
+                        <!--Contenedor-->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <img src="img/guille.jpg" class="img-responsive" class="active">
+                                <div class="carousel-caption">
+                                    <p>ENCARNACION ALQUILER</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="img/walter.jpg" class="img-responsive">						
+                                <div class="carousel-caption">
+                                    <p>ENCARNACION ALQUILER</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="img/bruno.jpg" class="img-responsive">						
+                                <div class="carousel-caption">
+                                    <p>ENCARNACION ALQUILER</p>
+                                </div>
+                            </div>
+                            <!--Controles-->
+                            <a href="#carousel-1" class="left carousel-control" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Anterior</span>
+                            </a>
+                            <a href="#carousel-1" class="right carousel-control" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Posterior</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="navbar navbar-default navbar-fixed-bottom">
+                    <div class="container">
+                        <!--<a class="navbar-btn btn-primary btn pull-left">Contacto</a>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
