--- a/EncarAlquiler/app/views/reservas/_form.html.erb
+++ b/EncarAlquiler/app/views/reservas/_form.html.erb
@@ -20,91 +20,55 @@
         <div class="CSS_Table_Example">
         <table>
         <tr>
-            <td>
-                <%= f.label :locatario_id %>
-                
-            </td>
-            <td>
-                <%= f.label :fecha_reserva %>
-                
-            </td>
-            <td>
-                <%= f.label :monto %>
-            </td>
-
-            <td>
-                <%= f.label :estado %>
-            </td>
-
+            <td><%= f.label :locatario_id %></td>
+            <td><%= f.label :fecha_reserva %></td>
+            <td><%= f.label :monto %></td>
+            <td><%= f.label :estado %></td>
             <td> Acciones</td>
-            </tr>
-
-            <tr>
-            <td>
-                
-                <%= f.collection_select(:locatario_id, Locatario.all, :id, :nombre,  { prompt: true}, {:class=>'form-control select2'}) %>
-            </td>
-            <td>
-                
-                <%= f.text_field :fecha_reserva, class: 'form-control input-sm datepicker', placeholder: 'Fecha de reserva'  %>
-            </td>
-            <td>
-                
-                <%= f.text_field :monto, class: 'form-control input-sm', placeholder: 'Monto total'  %>
-            </td>
-
-            <td>
-                
-                <%= f.select :estado, options_for_select([['Pediente' ,'Pendiente']]), { prompt: false}, {:class=>'form-control select2', value: 'Pendiente'} %>
-            </td>
-
-            <td>
-                <label class="col-lg-12 col-xs-12">&nbsp;</label>
-                <%= f.add_nested_fields_link :reservas_habitaciones, glyph(:plus), class: 'btn btn-primary btn-sm' %>
+        </tr>
+        <tr>
+            <td><%= f.collection_select(:locatario_id, Locatario.all, :id, :nombre,  { prompt: true}, {:class=>'form-control select2'}) %></td>
+            <td><%= f.text_field :fecha_reserva, class: 'form-control input-sm datepicker', placeholder: 'Fecha de reserva'  %></td>
+            <td><%= f.text_field :monto, class: 'form-control input-sm', placeholder: 'Monto total'  %></td>
+            <td><%= f.select :estado, options_for_select([['Pediente' ,'Pendiente']]), { prompt: false}, {:class=>'form-control select2', value: 'Pendiente'} %></td>
+            <td><%= f.add_nested_fields_link :reservas_habitaciones, glyph(:plus), class: 'btn btn-primary btn-sm' %>
                 <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
                   <span class="glyphicon glyphicon-floppy-disk"></span>
                 <% end %>
-
-                  <button type="reset" class="btn btn-info btn-sm">
-                      <i class="glyphicon glyphicon-refresh"></i>
-                  </button>
-
-                  <%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-default btn-sm' %>
-
+                <button type="reset" class="btn btn-info btn-sm">
+                    <i class="glyphicon glyphicon-refresh"></i>
+                </button>
             </td>
-            </tr>
-        </table>
-        </div>
+        </tr>
+    </table>
+</div>
     <%= f.nested_fields_for :reservas_habitaciones,  layout: :inline do |ff| %>
 
-        <div class="CSS_Table_Example">
+    <div class="CSS_Table_Example">
         <table>
-    <tr>
-    <td>
-        <% habitaciones_array = Habitacion.all.map { |habitacion| ["#{habitacion.numero} #{habitacion.descripcion} #{habitacion.precio } #{habitacion.estado} ", habitacion.id] } %>
-            <%= ff.select(:habitacion_id, options_for_select(habitaciones_array), { prompt: true}, {:class=>'form-control  input-sm select2', id: 'habitacion' }) %>
-    </td>
-            <td> 
-                <%= ff.remove_nested_fields_link glyph(:trash) , class: 'btn btn-danger btn-sm ', role: 'button', data: { confirm: 'Confirmar para eliminar este registro'} , hide_label: true %>
-            </td>
-        <td>
-            <% habitaciones_array = Habitacion.all.map { |habitacion| ["#{habitacion.precio }", habitacion.precio] } %>
-            <%= ff.select(:precio, options_for_select(habitaciones_array), { prompt: true}, {:class=>'form-control  input-sm select2', placeholder: 'Total', id: 'precio' }) %>
-        </td>
+            <tr>
+                <td>
+                    <% habitaciones_array = Habitacion.all.map { |habitacion| ["#{habitacion.numero} #{habitacion.descripcion} #{habitacion.precio } #{habitacion.estado} ", habitacion.id] } %>
+                    <%= ff.select(:habitacion_id, options_for_select(habitaciones_array), { prompt: true}, {:class=>'form-control  input-sm select2', id: 'habitacion' }) %>
+                </td>
+                <td>
+                    <%= ff.remove_nested_fields_link glyph(:trash) , class: 'btn btn-danger btn-sm ', role: 'button', data: { confirm: 'Confirmar para eliminar este registro'} , hide_label: true %>
+                </td>
+                <td>
+                    <% habitaciones_array = Habitacion.all.map { |habitacion| ["#{habitacion.precio }", habitacion.precio] } %>
+                    <%= ff.select(:precio, options_for_select(habitaciones_array), { prompt: true}, {:class=>'form-control  input-sm select2', placeholder: 'Total', id: 'precio' }) %>
+                </td>
 
-        <!--
-          <div class="form-group col-lg-2">
-            <%= ff.number_field :precio, class: 'form-control input-sm', placeholder: 'Total', id: 'precio' %>
-          </div>
-
-          -->
-          <td data-provide="datepicker" class="input-daterange">
-            <%= ff.text_field :fecha_inicio, class: 'form-control input-sm', placeholder: 'Fecha de inicio', id: 'fecha_inicio' %>
-            <%= ff.text_field :fecha_fin, class: 'form-control input-sm ', placeholder: 'Fecha fin', id: 'fecha_fin' %>
-          </td>
-          </tr>
-          </table>
-        </div>
+                <!--<div class="form-group col-lg-2">
+                <%= ff.number_field :precio, class: 'form-control input-sm', placeholder: 'Total', id: 'precio' %>
+                </div> -->
+                <td data-provide="datepicker" class="input-daterange">
+                    <%= ff.text_field :fecha_inicio, class: 'form-control input-sm', placeholder: 'Fecha de inicio', id: 'fecha_inicio' %>
+                    <%= ff.text_field :fecha_fin, class: 'form-control input-sm ', placeholder: 'Fecha fin', id: 'fecha_fin' %>
+                </td>
+            </tr>
+        </table>
+    </div>
     <% end %>
-<% end %>
+    <% end %>
 </div>
