--- a/EncarAlquiler/app/views/reservas/show.html.erb
+++ b/EncarAlquiler/app/views/reservas/show.html.erb
@@ -2,30 +2,25 @@
   <div class="row">
     <div class="col-md-12 col-md-offset-1">
       <h1 class="mycss">Reserva</h1>
-
-    <div class="col-md-12">
+        <div class="col-md-12">
         <div class="CSS_Table_Example">
     <table>
-            <thead>
-              <tr class="info">
+            
+              <tr>
               	<td class="text-center">Locatario</th>
                 <td class="text-center">Fecha de Reserva</th>
                 <td class="text-center">Monto</th>
                 <td class="text-center">Acciones</th>
               </tr>
-            </thead>
-            <tr>
-                <tr class="text-center">
+            
+            
+             <tr>
                 	<td><%= @reserva.locatario_id %></td>
                   <td><%= @reserva.fecha_reserva %></td>
                   <td><%= @reserva.monto %></td>
-                  <td>
-                    <%= link_to glyph(:pencil), edit_reserva_path(@reserva), class: 'btn btn-warning btn-sm' %>
-                    <%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-info btn-sm' %>
-                    </td>
+                  <td><%= link_to glyph(:pencil), edit_reserva_path(@reserva), class: 'btn btn-warning btn-sm' %> <%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-info btn-sm' %> </td>
             </tr>
-			</tbody>
-    </table>
+	   </table>
   </div>
 </div>
 </div>
